--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">News App</string>
 
-    <string name="no_news">No news found.</string>
+    <string name="no_news">Sorry .. we couldn\'t find any news... how about trying a gain later?</string>
 
-    <string name="no_internet_connection">No internet connection.</string>
+    <string name="no_internet_connection">No internet connection...\n try making sure you have a good connection and reopen the app again.</string>
 
 </resources>
